# jobdex

./: LICENSE  README.md  pyproject.toml
jobdex/: config.json  crawler.py  scraper.py  utils.py
jobdex/scrapers/: __init__.py  apple.py
